--- a/house-cleaning.html
+++ b/house-cleaning.html
@@ -55,23 +55,23 @@
     <!-- انسخ هنا شريط التنقل -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/">Keep House</a>
+            <a class="navbar-brand" href="index.html">Keep House</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#hero">الرئيسية</a>
+                        <a class="nav-link" href="index.html#hero">الرئيسية</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#services">خدماتنا</a>
+                        <a class="nav-link" href="index.html#services">خدماتنا</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#about-us">من نحن</a>
+                        <a class="nav-link" href="index.html#about-us">من نحن</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/#contact-us">اتصل بنا</a>
+                        <a class="nav-link" href="index.html#contact-us">اتصل بنا</a>
                     </li>
                 </ul>
             </div>
